# theora_wrappers

./: CMakeLists.txt  README.md  package.xml
include/theora_wrappers/: publisher.hpp  subscriber.hpp  visibility_control.h
src/: publisher.cpp  subscriber.cpp
