<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>theora_wrappers</name>
  <version>1.0.0</version>
  <description>Wrappers for Theora publisher and subscriber.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation s.r.l.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
